--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,3 @@
-# ci pipeline
 sudo: required
 language: generic
 
@@ -10,3 +9,15 @@ before_install:
 
 script:
   - docker run -e CI=true ayubtalha/docker-react npm run test
+
+deploy:
+  provider: elasticbeanstalk
+  region: 'eu-central-1'
+  app: 'frontend'
+  env: 'Frontend-env'
+  bucket_name: 'elasticbeanstalk-eu-central-1-558025156334'
+  bucket_path: 'frontend'
+  on:
+    branch: master
+  access_key_id: $AWS_ACCESS_KEY
+  secret_access_key: '$AWS_SECRET_KEY'
